Added Model classes for Adviser and Access Rights.

--- a/OrchidSecure/OrchidSecure/OrchidSecure.csproj
+++ b/OrchidSecure/OrchidSecure/OrchidSecure.csproj
@@ -146,6 +146,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\AccessRights\AccessRightsModel.cs" />
+    <Compile Include="Models\Adviser\AdviserModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -188,7 +190,11 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\" />
+    <Folder Include="Models\Account\" />
+    <Folder Include="Models\Address\" />
+    <Folder Include="Models\CreditScore\" />
+    <Folder Include="Models\Custommer\" />
+    <Folder Include="Models\Filial\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
