Added model classes

--- a/OrchidSecure/OrchidSecure/OrchidSecure.csproj
+++ b/OrchidSecure/OrchidSecure/OrchidSecure.csproj
@@ -146,8 +146,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\AccessRights\AccessRightsModel.cs" />
-    <Compile Include="Models\Adviser\AdviserModel.cs" />
+    <Compile Include="Models\AccessRights\AccessRight.cs" />
+    <Compile Include="Models\Account\Account.cs" />
+    <Compile Include="Models\Address\Address.cs" />
+    <Compile Include="Models\Adviser\Adviser.cs" />
+    <Compile Include="Models\CreditScore\CreditScore.cs" />
+    <Compile Include="Models\Custommer\Custommer.cs" />
+    <Compile Include="Models\Filial\Filial.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -190,11 +195,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Models\Account\" />
-    <Folder Include="Models\Address\" />
-    <Folder Include="Models\CreditScore\" />
-    <Folder Include="Models\Custommer\" />
-    <Folder Include="Models\Filial\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
